--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
   <style>
-    /* Reset and base styles */
     * {
       margin: 0;
       padding: 0;
@@ -15,23 +14,21 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #111;
-      color: #fff;
+      color: white;
     }
 
-    /* Header styles */
     header {
+      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      padding: 15px 20px;
       background-color: #111;
-      position: relative;
-      z-index: 1001;
     }
 
     .logo {
-      height: 40px; /* Smaller logo */
-      margin-top: 5px; /* Positioned higher */
+      height: 50px; /* Original size */
+      margin-left: 10px; /* Slightly to the right */
     }
 
     .icons {
@@ -41,14 +38,13 @@
     }
 
     .icon {
-      height: 20px;
+      height: 24px;
       cursor: pointer;
-      margin-top: 5px; /* Positioned higher */
     }
 
-    /* Menu icon styles */
+    /* Menu icon */
     .menu-icon {
-      width: 25px;
+      width: 20px;
       height: 2px;
       background-color: white;
       position: relative;
@@ -58,7 +54,7 @@
     .menu-icon::before,
     .menu-icon::after {
       content: "";
-      width: 25px;
+      width: 20px;
       height: 2px;
       background-color: white;
       position: absolute;
@@ -66,11 +62,11 @@
     }
 
     .menu-icon::before {
-      top: -8px;
+      top: -6px;
     }
 
     .menu-icon::after {
-      top: 8px;
+      top: 6px;
     }
 
     .menu-icon.open {
@@ -87,25 +83,24 @@
       top: 0;
     }
 
-    /* Sidebar styles */
+    /* Sidebar */
     .sidebar {
       position: fixed;
       top: 0;
       left: 0;
       height: 100%;
-      width: 250px;
-      background-color: #2b2b2b;
+      width: 100%;
+      background-color: #2b2b2b; /* Gray */
       transform: translateX(-100%);
       transition: transform 0.3s ease-in-out;
       z-index: 1000;
-      padding: 50px 20px;
+      padding: 80px 30px;
     }
 
     .sidebar.open {
       transform: translateX(0);
     }
 
-    /* Hide sidebar on larger screens */
     @media (min-width: 768px) {
       .sidebar {
         display: none;
@@ -116,16 +111,22 @@
 <body>
 
   <header>
-    <img src="logo-white.png" alt="Matt Scianna Logo" class="logo" />
+    <!-- Original Matt Scianna logo (white) -->
+    <img src="logo-white-original.png" alt="Matt Scianna Logo" class="logo" />
+    
+    <!-- Icons: shopping bag + menu -->
     <div class="icons">
-      <img src="shopping-bag-icon.png" class="icon" alt="Shopping Bag" />
+      <img src="shopping-bag-original.png" alt="Bag" class="icon" />
       <div id="menuToggle" class="menu-icon"></div>
     </div>
   </header>
 
+  <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
-    <p>Sidebar Content</p>
-    <!-- Add your sidebar links or content here -->
+    <!-- Your sidebar links go here -->
+    <p>Navigation Link 1</p>
+    <p>Navigation Link 2</p>
+    <p>Navigation Link 3</p>
   </div>
 
   <script>
