--- a/website/index.html
+++ b/website/index.html
@@ -112,7 +112,7 @@
 
   <header>
     <!-- Original Matt Scianna logo (white) -->
-    <img src="logo-white-original.png" alt="Matt Scianna Logo" class="logo" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     
     <!-- Icons: shopping bag + menu -->
     <div class="icons">
