--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
   <style>
+    /* Base Reset */
     * {
       margin: 0;
       padding: 0;
@@ -17,92 +18,28 @@
       color: white;
     }
 
+    /* Mobile Header */
     header {
-      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px 20px;
+      padding: 12px 16px;
       background-color: #111;
     }
 
     .logo {
-      height: 50px; /* Original size */
-      margin-left: 10px; /* Slightly to the right */
-    }
-
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 15px;
+      height: 36px; /* Smaller logo */
+      margin-left: 4px; /* Close to edge, but safe */
     }
 
     .icon {
-      height: 24px;
+      height: 22px;
       cursor: pointer;
     }
 
-    /* Menu icon */
-    .menu-icon {
-      width: 20px;
-      height: 2px;
-      background-color: white;
-      position: relative;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .menu-icon::before,
-    .menu-icon::after {
-      content: "";
-      width: 20px;
-      height: 2px;
-      background-color: white;
-      position: absolute;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .menu-icon::before {
-      top: -6px;
-    }
-
-    .menu-icon::after {
-      top: 6px;
-    }
-
-    .menu-icon.open {
-      background-color: transparent;
-    }
-
-    .menu-icon.open::before {
-      transform: rotate(45deg);
-      top: 0;
-    }
-
-    .menu-icon.open::after {
-      transform: rotate(-45deg);
-      top: 0;
-    }
-
-    /* Sidebar */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: #2b2b2b; /* Gray */
-      transform: translateX(-100%);
-      transition: transform 0.3s ease-in-out;
-      z-index: 1000;
-      padding: 80px 30px;
-    }
-
-    .sidebar.open {
-      transform: translateX(0);
-    }
-
+    /* Prevent layout from changing on bigger screens for now */
     @media (min-width: 768px) {
-      .sidebar {
+      header {
         display: none;
       }
     }
@@ -111,32 +48,12 @@
 <body>
 
   <header>
-    <!-- Original Matt Scianna logo (white) -->
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
-    
-    <!-- Icons: shopping bag + menu -->
-    <div class="icons">
-      <img src="shopping-bag-original.png" alt="Bag" class="icon" />
-      <div id="menuToggle" class="menu-icon"></div>
-    </div>
+    <img src="logo-white-original.png" alt="Matt Scianna Logo" class="logo" />
+    <img src="shopping-bag-original.png" alt="Shopping Bag" class="icon" />
   </header>
 
-  <!-- Sidebar -->
-  <div id="sidebar" class="sidebar">
-    <!-- Your sidebar links go here -->
-    <p>Navigation Link 1</p>
-    <p>Navigation Link 2</p>
-    <p>Navigation Link 3</p>
-  </div>
-
   <script>
-    const menuToggle = document.getElementById('menuToggle');
-    const sidebar = document.getElementById('sidebar');
-
-    menuToggle.addEventListener('click', () => {
-      menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open');
-    });
+    // Currently no interactivity needed
   </script>
 
 </body>
