--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,7 @@
 
   <header>
     <!-- Replace src with your actual image paths -->
-    <img src="https://via.placeholder.com/100x36?text=Matt+Logo" alt="Matt Scianna Logo" class="logo" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     <img src="https://via.placeholder.com/22?text=👜" alt="Shopping Bag" class="icon" />
   </header>
 
