--- a/website/index.html
+++ b/website/index.html
@@ -71,6 +71,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
+      top: 6px; /* Lowered logo slightly */
     }
 
     .logo {
@@ -115,7 +116,7 @@
 
     <!-- Centered Logo -->
     <div class="logo-container">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
+      <img src="https://via.placeholder.com/100x34?text=Logo" alt="Matt Scianna Logo" class="logo" />
     </div>
 
     <!-- Shopping Bag Icon (Right) -->
