--- a/website/index.html
+++ b/website/index.html
@@ -116,7 +116,7 @@
 
     <!-- Centered Logo -->
     <div class="logo-container">
-      <img src="https://via.placeholder.com/100x34?text=Logo" alt="Matt Scianna Logo" class="logo" />
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </div>
 
     <!-- Shopping Bag Icon (Right) -->
