--- a/website/index.html
+++ b/website/index.html
@@ -71,7 +71,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 6px; /* Lowered logo slightly */
+      top: 8px; /* lowered slightly more */
     }
 
     .logo {
@@ -91,8 +91,8 @@
       position: absolute;
       top: -6px;
       right: -6px;
-      background-color: red;
-      color: white;
+      background-color: white; /* Changed from red */
+      color: #111; /* Text is now black for contrast */
       border-radius: 50%;
       font-size: 10px;
       padding: 2px 5px;
