--- a/website/index.html
+++ b/website/index.html
@@ -71,7 +71,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: 8px; /* lowered slightly more */
+      top: 10px; /* Lowered just a bit more */
     }
 
     .logo {
@@ -91,8 +91,8 @@
       position: absolute;
       top: -6px;
       right: -6px;
-      background-color: white; /* Changed from red */
-      color: #111; /* Text is now black for contrast */
+      background-color: white;
+      color: #111;
       border-radius: 50%;
       font-size: 10px;
       padding: 2px 5px;
@@ -121,7 +121,7 @@
 
     <!-- Shopping Bag Icon (Right) -->
     <div class="cart-icon-container">
-      <img src="https://via.placeholder.com/22?text=👜" alt="Cart" class="cart-icon" />
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/shopping-bag-white.png?raw=true" alt="Cart" class="cart-icon" />
       <div class="cart-count" id="cartCount">0</div>
     </div>
   </header>
