--- a/website/index.html
+++ b/website/index.html
@@ -122,7 +122,7 @@
 
     <!-- Shopping Bag Icon (Right) -->
     <div class="cart-icon-container">
-      <img src="https://via.placeholder.com/22?text=👜" alt="Cart" class="cart-icon" />
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
       <div class="cart-count" id="cartCount">0</div>
     </div>
   </header>
