--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      top: 6px; /* Lowered slightly */
+      top: 3px; /* Raised slightly */
     }
 
     .menu-btn::before,
@@ -83,7 +83,7 @@
       position: relative;
       display: flex;
       align-items: center;
-      top: 6px; /* Lowered slightly */
+      top: 3px; /* Raised slightly */
     }
 
     .cart-icon {
