--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      top: 3px; /* Raised slightly */
+      top: 3px;
     }
 
     .menu-btn::before,
@@ -83,7 +83,7 @@
       position: relative;
       display: flex;
       align-items: center;
-      top: 3px; /* Raised slightly */
+      top: 1px; /* Slightly higher than before */
     }
 
     .cart-icon {
@@ -124,7 +124,7 @@
     <!-- Menu Icon (Left) -->
     <div id="menuToggle" class="menu-btn"></div>
 
-    <!-- Centered Logo -->
+    <!-- Centered Logo - refreshes main page only -->
     <a href="/" class="logo-container">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </a>
@@ -145,13 +145,11 @@
 
     // Cart logic
     const cartCountEl = document.getElementById('cartCount');
-
     function updateCartCount(count) {
       cartCountEl.textContent = count;
       cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
     }
 
-    // Placeholder count
     updateCartCount(0);
   </script>
 
