--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
     }
 
     .menu-btn {
-      width: 24px;
+      width: 18px; /* smaller width */
       height: 2px;
       background-color: white;
       position: relative;
@@ -38,7 +38,7 @@
     .menu-btn::before,
     .menu-btn::after {
       content: "";
-      width: 24px;
+      width: 18px; /* smaller width */
       height: 2px;
       background-color: white;
       position: absolute;
@@ -83,7 +83,7 @@
       position: relative;
       display: flex;
       align-items: center;
-      top: 4px; /* raised shopping bag icon */
+      top: 1px; /* raised shopping bag icon higher */
     }
 
     .cart-icon {
