--- a/website/index.html
+++ b/website/index.html
@@ -33,6 +33,7 @@
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
+      top: 2px; /* moved slightly lower */
     }
 
     .menu-btn::before,
