--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,7 @@
       font-family: Arial, sans-serif;
       background-color: #111;
       color: white;
+      overflow-x: hidden; /* prevent horizontal scroll when sidebar open */
     }
 
     header {
@@ -24,22 +25,25 @@
       align-items: center;
       padding: 12px 16px;
       background-color: #111;
+      transition: opacity 0.3s ease; /* for fade effect */
+      z-index: 1001;
     }
 
     .menu-btn {
-      width: 18px; /* smaller width */
+      width: 18px;
       height: 2px;
       background-color: white;
       position: relative;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      top: 2px; /* moved slightly lower */
+      top: 2px;
+      z-index: 1102;
     }
 
     .menu-btn::before,
     .menu-btn::after {
       content: "";
-      width: 18px; /* smaller width */
+      width: 18px;
       height: 2px;
       background-color: white;
       position: absolute;
@@ -74,6 +78,8 @@
       transform: translateX(-50%);
       top: 7px;
       cursor: pointer;
+      transition: opacity 0.3s ease;
+      z-index: 1001;
     }
 
     .logo {
@@ -84,13 +90,14 @@
       position: relative;
       display: flex;
       align-items: center;
-      top: 1px; /* raised shopping bag icon higher */
+      top: 1px;
+      z-index: 1001;
     }
 
     .cart-icon {
       height: 22px;
       cursor: pointer;
-      filter: brightness(0) invert(1); /* makes the icon white */
+      filter: brightness(0) invert(1);
     }
 
     .cart-count {
@@ -105,9 +112,33 @@
       line-height: 1;
       min-width: 16px;
       text-align: center;
-      display: none; /* Hidden until items are added */
+      display: none;
     }
 
+    /* Sidebar styles */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(255, 255, 255, 0.15); /* transparent gray */
+      backdrop-filter: blur(6px);
+      transition: left 0.35s ease;
+      z-index: 1100;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 24px;
+      user-select: none;
+    }
+
+    .sidebar.open {
+      left: 0;
+    }
+
+    /* Hide header on larger screens */
     @media (min-width: 768px) {
       header {
         display: none;
@@ -119,12 +150,12 @@
 
   <header>
     <!-- Menu Icon (Left) -->
-    <div id="menuToggle" class="menu-btn"></div>
+    <div id="menuToggle" class="menu-btn" aria-label="Toggle menu" role="button" tabindex="0"></div>
 
-    <!-- Centered Logo (link refreshes to /website/) -->
-    <a href="/website/" class="logo-container" aria-label="Matt Scianna Home">
+    <!-- Centered Logo -->
+    <div id="logo" class="logo-container" tabindex="0" role="link" aria-label="Reload page">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna Logo" class="logo" />
-    </a>
+    </div>
 
     <!-- Shopping Bag Icon (Right) -->
     <div class="cart-icon-container">
@@ -133,11 +164,42 @@
     </div>
   </header>
 
+  <!-- Sidebar -->
+  <div id="sidebar" class="sidebar" aria-hidden="true">
+    <!-- You can add menu content here if you want -->
+    Menu Content Here
+  </div>
+
   <script>
-    // Toggle menu icon open/close
     const menuToggle = document.getElementById('menuToggle');
+    const sidebar = document.getElementById('sidebar');
+    const header = document.querySelector('header');
+    const logo = document.getElementById('logo');
+
+    // Toggle sidebar open/close
     menuToggle.addEventListener('click', () => {
       menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open');
+      // Toggle aria attributes for accessibility
+      const expanded = menuToggle.classList.contains('open');
+      sidebar.setAttribute('aria-hidden', !expanded);
+      menuToggle.setAttribute('aria-expanded', expanded);
+    });
+
+    // Smooth reload on clicking the logo (fade out, reload, fade in)
+    function smoothReload() {
+      header.style.opacity = '0.3';
+      logo.style.opacity = '0.3';
+      setTimeout(() => {
+        window.location.reload();
+      }, 300);
+    }
+
+    logo.addEventListener('click', smoothReload);
+    logo.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        smoothReload();
+      }
     });
 
     // Cart count element
